updated man page

--- a/config/sdagent.conf
+++ b/config/sdagent.conf
@@ -1,313 +1,67 @@
-# Name:    INSRC
-# Desc:    Input source for incoming supportconfig archives
-# Values:  file:///path/to/supportconfig/archives
-#          ftp://ftp_server/path/to/supportconfig/archives
-# Default: Configured with sdagent-config
+# sdagent configuration file
+# Refer to sdagent.conf(5) for details
 #
 INSRC=#Run sdagent-config
-
-# Name:    INSRC_TYPE
-# Desc:    Input source service type
-# Values:  ftp://, file://
-# Default: Configured with sdagent-config
-#
 INSRC_TYPE=#Run sdagent-config
-
-# Name:    INSRC_HOST
-# Desc:    Input source hostname for incoming supportconfig archives
-# Values:  hostname string
-# Default: Configured with sdagent-config
-#
 INSRC_HOST=#Run sdagent-config
-
-# Name:    INSRC_DIR
-# Desc:    Input source directory for incoming supportconfig archives
-# Values:  Path string
-# Default: Configured with sdagent-config
-#
 INSRC_DIR=#Run sdagent-config
-
-# Name:    OUTSRC
-# Desc:    Output URL for SCA Report HTML files when POST_REPORT=1
-# Values:  file:///path/to/supportconfig/archives
-#          ftp://ftp_server/path/to/supportconfig/archives
-# Default: Configured with sdagent-config
-#
 OUTSRC=#Run sdagent-config
-
-# Name:    OUTSRC_TYPE
-# Desc:    Output URL service type for SCA Reports
-# Values:  ftp://, file://
-# Default: Configured with sdagent-config
-#
 OUTSRC_TYPE=#Run sdagent-config
-
-# Name:    OUTSRC_HOST
-# Desc:    Output URL hostname for SCA Reports
-# Values:  hostname string
-# Default: Configured with sdagent-config
-#
 OUTSRC_HOST=#Run sdagent-config
-
-# Name:    OUTSRC_DIR
-# Desc:    Output URL directory for SCA Reports
-# Values:  Path string
-# Default: Configured with sdagent-config
-#
 OUTSRC_DIR=#Run sdagent-config
-
-# Name:    ARCH_LOCATION
-# Desc:    URL address for archived supportconfig files when ARCHIVE_MODE=1
-# Values:  Same as INSRC
-# Default: $INSRC
-#
 ARCH_LOCATION=$INSRC
 
-# Name:    AGENT_ID
-# Desc:    The MySQL database AgentID for the agent
-# Values:  Unsigned integer
-# Default: Configured with sdagent-config
-#
 AGENT_ID=#Run sdagent-config
-
-# Name:    AGENT_PRIORITY_GROUP
-# Desc:    The delay in seconds for the agent to process archives, 0 is the highest priorty
-# Values:  Unsigned integer
-# Default: 0
-#
 AGENT_PRIORITY_GROUP=0
+AGENT_NOACCESS=0
+AGENT_INACTIVE=1
+AGENT_ACTIVE=2
 
-# Name:    DELAY_RETRY
-# Desc:    
-# Values:  
-# Default: 20
-#
 DELAY_RETRY=20
-
-# Name:    MAX_HOST_RETRY
-# Desc:    
-# Values:  
-# Default: 6
-#
 MAX_HOST_RETRY=6
-
-# Name:    MAX_ARCHIVE_RETRY
-# Desc:    
-# Values:  
-# Default: 8
-#
 MAX_ARCHIVE_RETRY=8
-
-# Name:    MAX_DISK_HEALTH
-# Desc:    
-# Values:  
-# Default: 98
-#
 MAX_DISK_HEALTH=98
-
-# Name:    MAX_ARCHIVE_SIZE
-# Desc:    
-# Values:  
-# Default: 3221225472
-#
 MAX_ARCHIVE_SIZE=3221225472
-
-# Name:    POST_REPORT
-# Desc:    
-# Values:  
-# Default: 0
-#
 POST_REPORT=0
-
-# Name:    ALL_PATTERNS
-# Desc:    
-# Values:  0 Off, 1 On
-# Default: 0
-#
 ALL_PATTERNS=0
-
-# Name:    ARCHIVE_MODE
-# Desc:    
-# Values:  
-# Default: 0
-#
 ARCHIVE_MODE=0
 
-#REPO_URL="https://server-diagnostic-patterns.googlecode.com/svn/stable/1.0/"
-#FPAT_URL="https://code.google.com/p/server-diagnostic-patterns/source/browse/stable/1.0"
-REPO_URL="https://server-diagnostic-patterns.googlecode.com/svn/trunk/packages/patterns/"
-FPAT_URL="https://code.google.com/p/server-diagnostic-patterns/source/browse/trunk/packages/patterns"
-
-
-# Name:    SCDIAG_HOME
-# Desc:    
-# Values:  
-# Default: /var/opt/sca/
-#
 SCDIAG_HOME="/var/opt/sca/"
-
-# Name:    SPRSRC
-# Desc:    
-# Values:  
-# Default: ${SCDIAG_HOME}/patterns/
-
 SPRSRC="${SCDIAG_HOME}/patterns/"
-
-# Name:    BASHLIB
-# Desc:    
-# Values:  
-# Default: ${SPRSRC}/lib/bash
-
 BASHLIB="${SPRSRC}/lib/bash"
-
-# Name:    PERL5LIB
-# Desc:    
-# Values:  
-# Default: ${PERL5LIB}:${SPRSRC}/lib/perl/
-
 PERL5LIB="${PERL5LIB}:${SPRSRC}/lib/perl/"
-
-# Name:    PYTHONPATH
-# Desc:    
-# Values:  
-# Default: ${PYTHONPATH}:${SPRSRC}/lib/python/
-
 PYTHONPATH="${PYTHONPATH}:${SPRSRC}/lib/python/"
 export BASHLIB PERL5LIB PYTHONPATH
 
-
-# Name:    PID_FILE
-# Desc:    
-# Values:  
-# Default: ${HOMEDIR}/work/${CURRENT_SCRIPT}.pid
-
 PID_FILE="${HOMEDIR}/work/${CURRENT_SCRIPT}.pid"
-
-# Name:    EMAIL_ADMIN
-# Desc:    
-# Values:  
-# Default: Configured with sdagent-config
-
 EMAIL_ADMIN=#Run sdagent-config
-
-# Name:    EMAIL_REPORT
-# Desc:    
-# Values:  
-# Default: Configured with sdagent-config
-
 EMAIL_REPORT=#Run sdagent-config
 
-# Name:    AGENT_NOACCESS
-# Desc:    
-# Values:  0
-# Default: 
-
-AGENT_NOACCESS=0
-
-# Name:    AGENT_INACTIVE
-# Desc:    
-# Values:  1
-# Default: 
-
-AGENT_INACTIVE=1
-
-# Name:    AGENT_ACTIVE
-# Desc:    Constant
-# Values:  2
-# Default: 
-
-AGENT_ACTIVE=2
-
-# Name:    DB_USER
-# Desc:    
-# Values:  
-# Default: sdagent
-
 DB_USER='sdagent'
-
-# Name:    DB_PASS
-# Desc:    
-# Values:  
-# Default: Configured with sdagent-config
-
 DB_PASS=#Run sdagent-config
-
-# Name:    DB_HOSTNAME
-# Desc:    
-# Values:  
-# Default: Configured with sdagent-config
-
 DB_HOSTNAME=#Run sdagent-config
-
-# Name:    DB_NAME
-# Desc:    
-# Values:  
-# Default: ServerDiagnostics
-
 DB_NAME='ServerDiagnostics'
-
-# Name:    DB_CONNECT
-# Desc:    
-# Values:  
-# Default: -h $DB_HOSTNAME -u $DB_USER -p${DB_PASS} $DB_NAME
-
 DB_CONNECT="-h $DB_HOSTNAME -u $DB_USER -p${DB_PASS} $DB_NAME"
 
-# Name:    STATUS_*
-# Desc:    
-# Values:   0-4
-#
 STATUS_OFF=0
 STATUS_SUCCESS=1
 STATUS_RECOMMEND=2
 STATUS_WARNING=3
 STATUS_CRITICAL=4
-
-# Name:    STATUS_NOTIFY_LEVEL
-# Desc:    
-# Values:  
-# Default: $STATUS_OFF
-
 STATUS_NOTIFY_LEVEL=$STATUS_OFF
-
-# Name:    LOGLEVEL_*
-# Desc:    
-# Values:  0-4
 
 LOGLEVEL_SILENT=0
 LOGLEVEL_MIN=1
 LOGLEVEL_NORMAL=2
 LOGLEVEL_VERBOSE=3
 LOGLEVEL_DEBUG=4
-
-# Name:    LOGLEVEL
-# Desc:    
-# Values:  
-# Default: $LOGLEVEL_MIN
-
 LOGLEVEL=$LOGLEVEL_MIN
-
-# Name:    LOGLEVEL_WORKER
-# Desc:    
-# Values:  
-# Default: $LOGLEVEL_MIN
-
 LOGLEVEL_WORKER=$LOGLEVEL_MIN
-
-# Name:    EMAIL_*
-# Desc:    
-# Values:  0-4
 
 EMAIL_SILENT=0
 EMAIL_MIN=1
 EMAIL_NORMAL=2
 EMAIL_VERBOSE=3
 EMAIL_DEBUG=4
-
-# Name:    EMAIL_LEVEL
-# Desc:    
-# Values:  
-# Default: $EMAIL_MIN
-
 EMAIL_LEVEL=$EMAIL_MIN
 
