configuring for FHS

--- a/config/sdagent.conf
+++ b/config/sdagent.conf
@@ -26,7 +26,7 @@ POST_REPORT=0
 ALL_PATTERNS=0
 ARCHIVE_MODE=0
 
-SCDIAG_HOME="/var/opt/sca/"
+SCDIAG_HOME="/usr/lib/sca/"
 SPRSRC="${SCDIAG_HOME}/patterns/"
 BASHLIB="${SPRSRC}/lib/bash"
 PERL5LIB="${PERL5LIB}:${SPRSRC}/lib/perl/"
