--- a/config/sdagent.conf
+++ b/config/sdagent.conf
@@ -26,11 +26,11 @@ POST_REPORT=0
 ALL_PATTERNS=0
 ARCHIVE_MODE=0
 
-SCDIAG_HOME="/usr/lib/sca/"
-SPRSRC="${SCDIAG_HOME}/patterns/"
-BASHLIB="${SPRSRC}/lib/bash"
-PERL5LIB="${PERL5LIB}:${SPRSRC}/lib/perl/"
-PYTHONPATH="${PYTHONPATH}:${SPRSRC}/lib/python/"
+SCA_WORK="/var/tmp/sca/"
+PATTERN_LIBRARY_BASE="/usr/lib/sca/patterns/"
+BASHLIB="${PATTERN_LIBRARY_BASE}/lib/bash"
+PERL5LIB="${PERL5LIB}:${PATTERN_LIBRARY_BASE}/lib/perl/"
+PYTHONPATH="${PYTHONPATH}:${PATTERN_LIBRARY_BASE}/lib/python/"
 export BASHLIB PERL5LIB PYTHONPATH
 
 PID_FILE="${HOMEDIR}/work/${CURRENT_SCRIPT}.pid"
