changed library location

--- a/config/sdagent.conf
+++ b/config/sdagent.conf
@@ -27,10 +27,11 @@ ALL_PATTERNS=0
 ARCHIVE_MODE=0
 
 SCA_WORK="/var/tmp/sca/"
-PATTERN_LIBRARY_BASE="/usr/lib/sca/patterns/"
-BASHLIB="${PATTERN_LIBRARY_BASE}/lib/bash"
-PERL5LIB="${PERL5LIB}:${PATTERN_LIBRARY_BASE}/lib/perl/"
-PYTHONPATH="${PYTHONPATH}:${PATTERN_LIBRARY_BASE}/lib/python/"
+SCA_LIBRARY_PATH="/usr/lib/sca"
+SCA_PATTERN_PATH="${SCA_LIBRARY_PATH}/patterns"
+BASHLIB="${SCA_LIBRARY_PATH}/bash"
+PERL5LIB="${PERL5LIB}:${SCA_LIBRARY_PATH}/perl/"
+PYTHONPATH="${PYTHONPATH}:${SCA_LIBRARY_PATH}/python/"
 export BASHLIB PERL5LIB PYTHONPATH
 
 PID_FILE="${HOMEDIR}/work/${CURRENT_SCRIPT}.pid"
