archive directory created

--- a/config/sdagent.conf
+++ b/config/sdagent.conf
@@ -57,7 +57,7 @@ LOGLEVEL_NORMAL=2
 LOGLEVEL_VERBOSE=3
 LOGLEVEL_DEBUG=4
 LOGLEVEL=$LOGLEVEL_MIN
-LOGLEVEL_WORKER=$LOGLEVEL_MIN
+LOGLEVEL_WORKER=$LOGLEVEL
 
 EMAIL_SILENT=0
 EMAIL_MIN=1
